app/overlays/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-todo
spec:
  selector:
    app: fastapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 30080   # (옵션) 포트 명시적으로 설정
  type: NodePort
