app/overlays/base/fastapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: fastapi.local   # 도메인 없이 쓸 거면 생략 가능
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fastapi-todo
                port:
                  number: 80
